<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birth"
        android:clickable="true"
        android:focusable="true">


        <TextView
            android:id="@+id/born"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:text="@string/born"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>


        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_toEndOf="@id/born"
            android:text=""
            android:hint="   /  /   "
            app:mask="##/##/####"
            android:textColor="@color/black"
            android:inputType="date"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout2"
        android:layout_below="@+id/birth"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:text="@string/gender"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender_group"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/female"
                android:text="@string/female"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/male"
                android:text="@string/male"/>

        </RadioGroup>

    </RelativeLayout>

</RelativeLayout>