<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register3">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/card1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/edit_text_box_corner"
        android:padding="7dp"
        android:alpha="0.7"
        android:text="@string/user_city"
        android:textColor="@color/white"
        android:textSize="25sp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:alpha="0.2"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="20dp">


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/city_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_location_city"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/city"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/city_image"
                android:background="@drawable/bottom_white_grey_border"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout2"
            android:layout_below="@+id/layout1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/state_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_location_state"
                android:contentDescription="@string/todo" />
            <TextView
                android:id="@+id/state"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/state_image"
                android:background="@drawable/bottom_white_grey_border"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/layout2"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/text_box_corner_white"
                android:drawableStart="@drawable/ic_location_blue"
                android:text="@string/location"
                android:textColor="@color/colormylocation" />
            <TextView
                android:textSize="18sp"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/ou"
                android:textColor="@color/white"
                android:layout_below="@id/button_location"/>

            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/goto_cep"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/goto_zip"
                android:layout_below="@id/ou"
                android:textColor="@color/white"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"/>
        </RelativeLayout>

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/card1"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_rounded_button"
        android:backgroundTint="@color/green"
        android:text="@string/next"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/button_register"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:background="@drawable/edit_text_box_corner"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:alpha="0.7"/>

    <ProgressBar
        android:id="@+id/registerProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/cep"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/background"
        tools:ignore="NotSibling" />

</RelativeLayout>