<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/logoTopLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="117dp">

            <include layout="@layout/snippet_top_login" />

        </RelativeLayout>


        <!-- middle Login -->
        <RelativeLayout
            android:id="@+id/middleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoTopLogin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputemail"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/middleLogin"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/white_rounded_button"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/link_singup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/google_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/link_registrar"
            android:textColor="@color/link_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/esqueceusenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/button_login"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/esqueceusenha"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/loadingLoginProgressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@id/button_login"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/background" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/esqueceusenha"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp">

        </com.google.android.gms.common.SignInButton>


    </RelativeLayout>

</ScrollView>