<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/relLayout1profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ic_profile"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp" />

        <TextView
            android:layout_below="@id/ic_profile"
            android:id="@+id/miips_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/miips_id"
            android:layout_toStartOf="@+id/city"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/miips_id"
            android:layout_centerHorizontal="true"
            android:padding="2dp"
            android:textColor="@color/colormylocation"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayout1profile"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:id="@+id/topPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relLayout2profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_border_for_location_button">

                    <TextView
                        android:id="@+id/Account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Conta"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Account"
                        android:padding="10dp"
                        android:text="@string/profile"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editProfile"
                        android:padding="10dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relLayout3profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_border_for_location_button">

                    <TextView
                        android:id="@+id/About"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/politic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/About"
                        android:padding="10dp"
                        android:text="@string/politic"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/terms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/politic"
                        android:padding="10dp"
                        android:text="@string/terms"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relLayout4profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_border_for_location_button">

                    <TextView
                        android:id="@+id/Support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Suporte"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/helpCenter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Support"
                        android:padding="10dp"
                        android:text="@string/center_helper"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/helpCenter"
                        android:padding="10dp"
                        android:text="@string/feedback"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/white_border_for_location_button">

                    <TextView
                        android:id="@+id/btn_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/logout"
                        android:textColor="@color/link_blue"
                        android:textSize="17sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <include
        layout="@layout/layout_bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <ProgressBar
        android:id="@+id/loadingProfileProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/background" />

</RelativeLayout>